Add css no olho do passworld

--- a/static/style.css
+++ b/static/style.css
@@ -618,187 +618,209 @@ body {
   padding-top: 80px;
   overflow: hidden;
 
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 1.5em;
-  background-color: #000000;
-  border-radius: 25px;
-  transition: 0.4s ease-in-out;
-  max-width: 250px;
-  width: 100%;
-}
-
-.form:hover {
-  border: 1px solid red;
-}
-
-#heading {
-  text-align: center;
-  margin: 1em;
-  color: rgb(255, 255, 255);
-  font-size: 1.2em;
-}
-
-.field {
-  display: flex;
-  align-items: center;
-  gap: 0.5em;
-  border-radius: 25px;
-  padding: 0.1em 0.2em;
-  background-color: #171717;
-  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
-}
-
-.input-icon {
-  height: 1em;
-  width: 1em;
-  fill: white;
-  flex-shrink: 0;
-  margin-left: 0.5em;
-}
-
-.input-field {
-  background: none;
-  border: none;
-  outline: none;
-  width: 100%;
-  color: #d3d3d3;
-  font-size: 0.9em;
-  padding: 0em 0;
-  line-height: 1em;
-  padding-top: 0.6em;
-}
-
-.form .btn {
-  display: flex;
-  justify-content: center;
-  margin-top: 1.5em;
-}
-
-.button-name {
-  align-items: center;
-  appearance: none;
-  background-color: #ff0000;
-  border-radius: 4px;
-  border-width: 0;
-  box-shadow: rgba(163, 0, 0, 0.2) 0 2px 4px,
-    rgba(216, 0, 0, 0.15) 0 7px 13px -3px, #000000 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-flex;
-  height: 28px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 10px;
-  padding-right: 10px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: box-shadow 0.15s, transform 0.15s;
-  user-select: none;
-  white-space: nowrap;
-  will-change: box-shadow, transform;
-  font-size: 12px;
-}
-
-.button-login {
-  min-width: 220px;
-  width: 100%;
-  max-width: 300px;
-}
-
-.button-name:focus {
-  box-shadow: #000000 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
-    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #000000 0 -3px 0 inset;
-}
-
-.button-name:hover {
-  box-shadow: rgba(45, 35, 66, 0.3) 0 4px 8px,
-    rgba(45, 35, 66, 0.2) 0 7px 13px -3px, #000000 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-name:active {
-  box-shadow: #000000 0 3px 7px inset;
-  transform: translateY(2px);
-}
-
-#bg-video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  z-index: -1;
-}
-
-@media (max-width: 600px) {
-  .container {
-    padding: 10px 12px;
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 1.5em;
+    background-color: #000000;
+    border-radius: 25px;
+    transition: 0.4s ease-in-out;
+    max-width: 250px;
+    width: 100%;
   }
 
-  .nav-footer nav a {
-    font-size: 1.1em;
-    margin: 0 10px;
+  .form:hover {
+    border: 1px solid red;
   }
 
-  .post-container {
-    max-width: 98%;
-    margin: 10px auto;
-  }
-
-  .post-content {
-    padding: 16px 23px;
-    border-radius: 0 0 18px 18px;
-    margin-top: -4px;
-  }
-
-  .user-box {
-    padding: 12px 28px;
-    border-radius: 18px 18px 0 0;
+  #heading {
+    text-align: center;
+    margin: 1em;
+    color: rgb(255, 255, 255);
     font-size: 1.2em;
-    background-color: #000;
-    margin-bottom: 0;
-    border: 1.6px solid #444;
   }
 
-  .tres-pontos {
-    right: 5px;
+  .field {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    border-radius: 25px;
+    padding: 0.1em 0.2em;
+    background-color: #171717;
+    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
   }
 
-  .post-outro {
-    border-radius: 0 20px 20px 20px;
+  .input-icon {
+    height: 1em;
+    width: 1em;
+    fill: white;
+    flex-shrink: 0;
+    margin-left: 0.5em;
   }
-}
 
-.container_chat_bot {
-  align-items: center;
-  justify-content: flex-end;
-  padding-bottom: 40vh;
-}
+  .input-field {
+    background: none;
+    border: none;
+    outline: none;
+    width: 100%;
+    color: #d3d3d3;
+    font-size: 0.9em;
+    padding: 0em 0;
+    line-height: 1em;
+    padding-top: 0.6em;
+  }
 
-img,
-img:focus,
-img:active,
-a img,
-a img:focus,
-a img:active {
-  outline: none;
-  background: transparent !important;
-  border: none;
-  -webkit-tap-highlight-color: transparent;
-  user-select: none;
-}
+  .form .btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5em;
+  }
 
-button,
-button:focus,
-button:active {
-  outline: none;
-  -webkit-tap-highlight-color: transparent;
+  .button-name {
+    align-items: center;
+    appearance: none;
+    background-color: #ff0000;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(163, 0, 0, 0.2) 0 2px 4px,
+      rgba(216, 0, 0, 0.15) 0 7px 13px -3px, #000000 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-flex;
+    height: 28px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 10px;
+    padding-right: 10px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: box-shadow 0.15s, transform 0.15s;
+    user-select: none;
+    white-space: nowrap;
+    will-change: box-shadow, transform;
+    font-size: 12px;
+  }
+
+  .button-login {
+    min-width: 220px;
+    width: 100%;
+    max-width: 300px;
+  }
+
+  .button-name:focus {
+    box-shadow: #000000 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+      rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #000000 0 -3px 0 inset;
+  }
+
+  .button-name:hover {
+    box-shadow: rgba(45, 35, 66, 0.3) 0 4px 8px,
+      rgba(45, 35, 66, 0.2) 0 7px 13px -3px, #000000 0 -3px 0 inset;
+    transform: translateY(-2px);
+  }
+
+  .button-name:active {
+    box-shadow: #000000 0 3px 7px inset;
+    transform: translateY(2px);
+  }
+
+  #bg-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+  }
+
+  .field {
+    position: relative;
+  }
+
+  .eye-toggle {
+    position: absolute;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+  }
+
+  .eye-icon {
+    width: 1em;
+    height: 1em;
+    fill: white;
+  }
+
+  @media (max-width: 600px) {
+    .container {
+      padding: 10px 12px;
+    }
+
+    .nav-footer nav a {
+      font-size: 1.1em;
+      margin: 0 10px;
+    }
+
+    .post-container {
+      max-width: 98%;
+      margin: 10px auto;
+    }
+
+    .post-content {
+      padding: 16px 23px;
+      border-radius: 0 0 18px 18px;
+      margin-top: -4px;
+    }
+
+    .user-box {
+      padding: 12px 28px;
+      border-radius: 18px 18px 0 0;
+      font-size: 1.2em;
+      background-color: #000;
+      margin-bottom: 0;
+      border: 1.6px solid #444;
+    }
+
+    .tres-pontos {
+      right: 5px;
+    }
+
+    .post-outro {
+      border-radius: 0 20px 20px 20px;
+    }
+  }
+
+  .container_chat_bot {
+    align-items: center;
+    justify-content: flex-end;
+    padding-bottom: 40vh;
+  }
+
+  img,
+  img:focus,
+  img:active,
+  a img,
+  a img:focus,
+  a img:active {
+    outline: none;
+    background: transparent !important;
+    border: none;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+  }
+
+  button,
+  button:focus,
+  button:active {
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
+  }
 }
