Separando os body do body login

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
       href="{{ url_for('static', filename='style.css') }}?v=2.0"
     />
   </head>
-  <body>
+  <body class="body-login">
     <form class="form" method="POST" action="{{ url_for('login') }}">
       <p id="heading">Bem-Vindos<br />a Opinion</p>
       <video autoplay muted loop id="bg-video">
