Mudança visual no uso_banco

--- a/templates/uso_banco.html
+++ b/templates/uso_banco.html
@@ -30,13 +30,13 @@
     </style>
   </head>
   <body>
-    <h1>Uso do Banco de Dados</h1>
-    <p><strong>Tamanho total:</strong> {{ total }}</p>
+    <h1>DataBase do Opinion</h1>
+    <p><strong>Tamanho TOTAL:</strong> {{ total }}</p>
     <table>
       <thead>
         <tr>
-          <th>Tabela</th>
-          <th>Tamanho</th>
+          <th>TABELAS</th>
+          <th>TAMANHO</th>
         </tr>
       </thead>
       <tbody>
