Colocando nav-top no trending

--- a/templates/trending.html
+++ b/templates/trending.html
@@ -10,7 +10,8 @@
     />
   </head>
   <body>
-    <p>Olá essas são as tendencias</p>
+    <div class="nav-top">Tendências • Opinion</div>
+    <div class="container">
     {% for post, tempo, likes_count, comentarios_count, comentarios, liked in
     posts %}
     <div class="post-container">
