Alteração simples no trend

--- a/templates/trending.html
+++ b/templates/trending.html
@@ -17,7 +17,7 @@
       <div class="post-container">
         <div class="user-box">
           <a href="{{ url_for('perfil', usuario=post.autor.apelido) }}">
-            @{{ post.autor.apelido }}
+            {{ post.autor.apelido }}
           </a>
         </div>
 
