--- a/templates/search.html
+++ b/templates/search.html
@@ -91,7 +91,7 @@
           data.usuarios.forEach((u) => {
             const li = document.createElement("li");
             li.classList.add("usuario-item");
-            li.innerHTML = `<a href="/perfil?usuario=${u.apelido}">${u.apelido}</a>`;
+            li.innerHTML = `<a href="/perfil?usuario=${u.apelido}">@${u.apelido}</a>`;
             usuariosLista.appendChild(li);
           });
 
