--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
       <p id="heading">Bem-Vindos<br />a Opinion</p>
       <video autoplay muted loop id="bg-video">
         <source
-          src="{{ url_for('static', filename='backround.mp4') }}"
+          src="{{ url_for('static', filename='videos/backround.mp4') }}"
           type="video/mp4"
         />
         Seu navegador não suporta vídeo.
