Mudança no nome da nav-top do html trending

--- a/templates/trending.html
+++ b/templates/trending.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div class="nav-top">Tendências • Opinion</div>
+    <div class="nav-top">Opiniões VIRAIS do Dia</div>
     <div class="container">
       {% for item in posts %}
       <div class="post-container {% if item.is_viral %}viral-post{% endif %}">
