--- a/templates/trending.html
+++ b/templates/trending.html
@@ -10,7 +10,8 @@
     />
   </head>
   <body>
-    <div class="nav-top">Opiniões mais Virais</div>
+    <div class="nav-top">Trends • Opinion</div>
+    <h2>Essas são as opiniões mais virais do dia:</h2>
     <div class="container">
       {% for item in posts %}
       <div class="post-container {% if item.is_viral %}viral-post{% endif %}">
