--- a/templates/trending.html
+++ b/templates/trending.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="nav-top">Trends • Opinion</div>
-    <h2>Essas são as opiniões mais virais do dia:</h2>
+    <h3>Opiniões mais virais do dia:</h3>
     <div class="container">
       {% for item in posts %}
       <div class="post-container {% if item.is_viral %}viral-post{% endif %}">
