--- a/templates/trending.html
+++ b/templates/trending.html
@@ -11,7 +11,10 @@
   </head>
   <body>
     <div class="nav-top">Trends • Opinion</div>
-    <h3>Opiniões mais virais do dia:</h3>
+    <h3 style="display: flex; align-items: center">
+      <img src="static/images/12.png" alt="Ícone" style="margin-right: 8px" />
+      Opiniões mais virais do dia:
+    </h3>
     <div class="container">
       {% for item in posts %}
       <div class="post-container {% if item.is_viral %}viral-post{% endif %}">
