--- a/templates/trending.html
+++ b/templates/trending.html
@@ -10,9 +10,12 @@
     />
   </head>
   <body>
-    <div class="nav-top">Trends • Opinion</div>
-    <h3 style="display: flex; align-items: center">
-      <img src="static/images/12.png" alt="Ícone" style="margin-right: 8px" />
+    <h3 style="display: flex; align-items: center; font-size: 1.2em">
+      <img
+        src="static/images/12.png"
+        alt="Ícone"
+        style="height: 1em; margin-right: 8px"
+      />
       Opiniões mais virais do dia:
     </h3>
     <div class="container">
