--- a/templates/trending.html
+++ b/templates/trending.html
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
+    <div class="nav-top">Trends • Opinion</div>
     <h3 style="display: flex; align-items: center; font-size: 1.2em">
       <img
         src="static/images/12.png"
