--- a/templates/trending.html
+++ b/templates/trending.html
@@ -11,7 +11,14 @@
   </head>
   <body>
     <div class="nav-top">Trends • Opinion</div>
-    <h3 style="display: flex; align-items: center; font-size: 1.2em">
+    <h3
+      style="
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.2em;
+      "
+    >
       <img
         src="static/images/12.png"
         alt="Ícone"
