Alteração leve em algumas frases

--- a/templates/groups.html
+++ b/templates/groups.html
@@ -9,14 +9,14 @@
         font-family: Arial, sans-serif;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         height: 100vh;
         margin: 0;
         background: #000;
         color: #fff;
         flex-direction: column;
         text-align: center;
-        padding: 0;
+        padding-top: 40px;
       }
     </style>
     <link
@@ -25,11 +25,10 @@
     />
   </head>
   <body>
-    <h2>FUNÇÃO DE GRUPOS EM BREVE !!</h2>
+    <h2>⚠️FUNÇÃO DE GRUPOS EM BREVE</h2>
     <p>
-      A criação dessa função requer uma pequena quantidade de verba. Pedimos
-      paciência para o desenvolvimento dessa funcionalidade, que fará pessoas
-      falarem sobre os mesmos interesses
+      Esperamos trabalhando na criação dessa função no Opinion, onde irá
+      conectar pessoas com mesmos interesses de assuntos.
     </p>
     <footer class="nav-footer">
       <nav>
