--- a/templates/feed.html
+++ b/templates/feed.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div class="nav-top">Feed • Opinion</div>
+    <div class="nav-top">Opinion</div>
     <div class="container">
       <div class="container_chat_bot" id="newPostBox">
         <div class="container-chat-options">
