Alt nas escritas do search

--- a/templates/search.html
+++ b/templates/search.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div class="nav-top">Pesquisa • Opinion</div>
+    <div class="nav-top">Buscar no Opinion</div>
     <div class="container">
       <div class="container">
         <div class="search-container">
@@ -22,7 +22,7 @@
           <input
             type="text"
             id="searchInput"
-            placeholder="O que deseja pesquisar?"
+            placeholder="O que deseja buscar?"
           />
         </div>
 
